--- a/app/views/meals/_rsvp.html.erb
+++ b/app/views/meals/_rsvp.html.erb
@@ -1,4 +1,5 @@
-<h4>RSVP: <%= @invite.invite_status %></h4>
+<h4>You're : <%= @invite.invite_status.capitalize %></h4>
 <%= button_to 'Attending', meal_invite_path(id: @invite.id, meal_id: @meal, invite_status: 'attending', role: 'guest'), method: :patch, class: 'btn btn-success' %>
+<br>
 <%= button_to 'Decline', meal_invite_path(id: @invite.id, meal_id: @meal, invite_status: 'decline',  role: 'guest'), method: :patch, class: 'bth btn-danger' %>
 <br>
