--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -1,15 +1,16 @@
 <div class="row">
   <div class="col-md-3">
-    <h2 class="meal-box options">
-    <p>Host: </p>
-      <%= @meal.host.email %></h2>
+    <h3 class="meal-box options">
+      Host:
+      <%= @meal.host.email %>
+    </h3>
   </div>
   <div class="col-md-4 col-md-offset-1">
     <p class="meal-title meal-box"><%= @meal.title %></p>
   </div>
   <div class="col-md-3 col-md-offset-1">
     <h2 class="meal-box">
-      <%= @meal.hosted_at.strftime("%B %d, '%y | %I:%M %p") %>
+      <%= @meal.hosted_at.strftime("%B %d, '%y \n %I:%M %p") %>
       <p>@ <%= @meal.location %></p></h2>
 
   </div>
@@ -26,22 +27,23 @@
         <%= render 'rsvp' %>
       </div>
     <% end %>
-
+<br>
     <div class='meal-box padding'>
       <%= render 'guest_list' %>
     </div>
   </div>
-  <div class="col-md-4 col-md-offset-1 meal-box">
+
+  <div class="col-md-4 col-md-offset-1 meal-box dish-list">
     <h2> Things to bring </h2>
     <% if @meal.dishes.empty? %>
       <p> The host hasn't added any dishes </p>
     <% end %>
-    <table class="meal-box dish-flair">
+    <table class="meal-box dish-flair col-md-12 ">
       <thead>
         Play nice - Contribute and bring something!
       </thead>
       <tbody>
-        <tr><%= render @meal.dishes %></tr>
+        <%= render @meal.dishes %>
       </tbody>
     </table>
   </div>
