--- a/app/views/dishes/search.html.erb
+++ b/app/views/dishes/search.html.erb
@@ -1,3 +1,4 @@
+<%= button_to 'Back to meal', meal_path(@meal), method: :get, class: 'btn btn-primary' %>
 <%= raw @banner %>
 <br>
 <% @matches.each do |match| %>
