minor style on forms and invites
errors not showing for dish#new and meal#new

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -90,6 +90,10 @@ color: black;
   padding: 10px;
 }
 
+.block {
+  display: inline-block;
+}
+
 .navbar-default {
   background-color: #666633;
   border-color: #364024;
