--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -1,33 +1,35 @@
-<h1>Form for new meals </h1>
-<%= form_for (@meal) do |f| %>
+<div class="row-fluid">
+  <%= form_for (@meal), html: {:class => "form-horizontal"} do |f| %>
 
-  <% if @meal.errors.any? %>
-  <div class="bg-danger">
-    This form has <%=pluralize(@meal.errors.count, "error") %>.
-  </div>
-  <ul>
-    <% @meal.errors.full_messages.each do |msg| %>
-    <li>* <%= msg %> </li>
-    <% end %>
-  </ul>
+  <fieldset>
+
+    <legend> New Meal </legend>
+
+    <div class="control-group">
+      <%= f.label :title, "Title" %>
+      <div class="controls">
+        <%= f.text_field :title %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :location, 'Location' %>
+      <div class="controls">
+        <%= f.text_field :location %>
+      </div>
+    </div>
+    <br>
+    <div class="control-group">
+      <%= f.label :hosted_at, "When?" %>
+      <div class="controls">
+        <%= f.datetime_select :hosted_at, :ampm => true, :minute_step => 15 %>
+      </div>
+    </div>
+    <br>
+    <div class="form-actions">
+      <%= f.submit "Create Meal!", class: "btn btn-large btn-primary" %>
+    </div>
+
+  </fieldset>
   <% end %>
-
-  <div class="field">
-    <%= f.label :title, "Title" %>
-    <%= f.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= f.label :location, 'Location' %>
-    <%= f.text_field :location %>
-  </div>
-
-  <div class="field">
-    <%= f.label :hosted_at, "When?" %>
-    <%= f.datetime_select :hosted_at, :ampm => true, :minute_step => 15 %>
-  </div>
-
-  <div class="actions">
-  <%= f.submit "Create Meal!", class: "btn btn-large btn-primary" %>
 </div>
-<% end %>
