--- a/app/views/dishes/new.html.erb
+++ b/app/views/dishes/new.html.erb
@@ -1,42 +1,43 @@
 <%= button_to 'Back to meal', meal_path(@meal), method: :get, class: 'btn btn-primary' %>
-<%= form_for [@meal, @dish] do |f| %>
+<br>
+<div class="row-fluid">
+  <%= form_for [@meal, @dish], html: {class: "form-horizontal"} do |f| %>
 
-  <% if @dish.errors.any? %>
-  <div id="errorExplanation text-center">
-    <div class="bg-danger">
-      the form contains <%=pluralize(@dish.errors.count, "error") %>.
+  <fieldset>
+    <legend> New Dish </legend>
+
+    <div class="control-group">
+      <%= f.label :name %>
+      <div class="controls">
+        <%= f.text_field :name %>
+      </div>
     </div>
-    <ul>
-      <% @dish.errors.full_messages.each do |msg| %>
-      <li>* <%= msg %> </li>
-      <% end %>
-    </ul>
-  </div>
+
+    <div class="control-group">
+      <%= f.label :thumb_url, 'Picture Link' %>
+      <div class="controls">
+        <%= f.text_field :thumb_url %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :recipe_url, 'Recipe Link' %>
+      <div class="controls">
+        <%= f.text_field :recipe_url %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label "Anyone can bring this (uncheck if you are bringing it)" %>
+      <div class="controls">
+        <%= f.check_box :can_be_claimed %>
+      </div>
+    </div>
+
+    <div class="form-actions">
+      <%= f.submit "Save Dish!", class: "btn btn-large btn-primary" %>
+    </div>
+
+  </fieldset>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :thumb_url, 'Picture Link' %>
-    <%= f.text_field :thumb_url %>
-  </div>
-
-  <div class="field">
-    <%= f.label :recipe_url, 'Recipe Link' %>
-    <%= f.text_field :recipe_url %>
-  </div>
-
-  <div class="field">
-    <%= f.label "Anyone can bring this (uncheck if you are bringing it)" %>
-    <br>
-    <%= f.check_box :can_be_claimed %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Save Dish!", class: "btn btn-large btn-primary" %>
-  </div>
-
-<% end %>
+</div>
