--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,24 +1,35 @@
 <h2>Sign up</h2>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)), html: {class: "form-horizontal"} do |f| %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div>
+
+
+  <div class="control-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
+
   </div>
 
-  <div>
+  <div class="control-group">
     <%= f.label :password %><br />
+
     <%= f.password_field :password, autocomplete: "off" %>
+
+  </div>
+
+  <div class="control-group">
+    <%= f.label :password_confirmation %><br />
+
+    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+
   </div>
 
   <div>
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.submit "Sign up" %>
   </div>
-
-  <div><%= f.submit "Sign up" %></div>
 <% end %>
 
 <%= render "users/shared/links" %>
+
+
