--- a/app/views/dishes/new.html.erb
+++ b/app/views/dishes/new.html.erb
@@ -3,41 +3,54 @@
 <div class="row-fluid">
   <%= form_for [@meal, @dish], html: {class: "form-horizontal"} do |f| %>
 
-  <fieldset>
-    <legend> New Dish </legend>
+  <div class="col-md-6 col-md-offset-3">
+    <% if @dish.errors.any? %>
+     <div class="bg-danger">
+      This form has <%=pluralize(@dish.errors.count, "error") %>.
+    </div>
+    <ul class="text-left">
+      <% @dish.errors.full_messages.each do |msg| %>
+      <li>* <%= msg %> </li>
+      <% end %>
+    </ul>
+    <% end %>
 
-    <div class="control-group">
-      <%= f.label :name %>
-      <div class="controls">
-        <%= f.text_field :name %>
+    <fieldset>
+      <legend> New Dish </legend>
+
+      <div class="control-group">
+        <%= f.label :name %>
+        <div class="controls">
+          <%= f.text_field :name %>
+        </div>
       </div>
-    </div>
 
-    <div class="control-group">
-      <%= f.label :thumb_url, 'Picture Link' %>
-      <div class="controls">
-        <%= f.text_field :thumb_url %>
+      <div class="control-group">
+        <%= f.label :thumb_url, 'Picture Link' %>
+        <div class="controls">
+          <%= f.text_field :thumb_url %>
+        </div>
       </div>
-    </div>
 
-    <div class="control-group">
-      <%= f.label :recipe_url, 'Recipe Link' %>
-      <div class="controls">
-        <%= f.text_field :recipe_url %>
+      <div class="control-group">
+        <%= f.label :recipe_url, 'Recipe Link' %>
+        <div class="controls">
+          <%= f.text_field :recipe_url %>
+        </div>
       </div>
-    </div>
 
-    <div class="control-group">
-      <%= f.label "Anyone can bring this (uncheck if you are bringing it)" %>
-      <div class="controls">
-        <%= f.check_box :can_be_claimed %>
+      <div class="control-group">
+        <%= f.label "Anyone can bring this (uncheck if you are bringing it)" %>
+        <div class="controls">
+          <%= f.check_box :can_be_claimed %>
+        </div>
       </div>
-    </div>
 
-    <div class="form-actions">
-      <%= f.submit "Save Dish!", class: "btn btn-large btn-primary" %>
-    </div>
+      <div class="form-actions">
+        <%= f.submit "Save Dish!", class: "btn btn-large btn-primary" %>
+      </div>
 
-  </fieldset>
+    </fieldset>
+  </div>
   <% end %>
 </div>
