--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,14 @@
  *= require_self
  */
 
+.notice{
+  width: 50%;
+  margin-left: 25%;
+  z-index:10000;
+  background-color: navy;
+  color: white;
+}
+
 .meal-box {
   background-color: rgba(102, 102, 51, 0.5);
   border: 2px solid black;
