colorize dishes in meal#show

--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -41,6 +41,10 @@
     <table class="meal-box dish-flair col-md-12 ">
       <thead>
         Play nice - Contribute and bring something!
+        <div class="key unclaimed">Unclaimed</div>
+        <div class="key claimed">Someone Else</div>
+        <div class="key user-claimed">I'm Bringing</div>
+        <br>
       </thead>
       <tbody>
         <%= render @meal.dishes %>
