--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,9 +19,14 @@ img {
   height: auto;
 }
 
+.search-img img {
+  width: 100%;
+  height: auto;
+}
+
 .notice{
-  width: 50%;
-  margin-left: 25%;
+  width: 40%;
+  margin-left: 30%;
   z-index:10000;
   background-color: navy;
   color: white;
@@ -92,11 +97,11 @@ color: black;
 }
 
 .claimed {
-  background-color: yellow;
+  background-color: rgba(0, 200, 200, 0.5);
 }
 
 .user-claimed {
-  background-color: blue;
+  background-color: rgba(200, 0, 0, 0.5);
 }
 
 .dish-list {
