--- a/app/views/dishes/_dish.html.erb
+++ b/app/views/dishes/_dish.html.erb
@@ -5,7 +5,7 @@
     <% else %>
       <td class="dish-flair claimed">
     <% end %>
-  <% elsif dish.claimer_id == @meal.host %>
+  <% elsif dish.claimer_id == @meal.host_invite.id %>
     <td class="dish-flair unclaimed">
   <% elsif Invite.find(dish.claimer_id).user_id == current_user.id  %>
     <td class="dish-flair user-claimed">
@@ -15,6 +15,7 @@
     <%= link_to dish.name, meal_dish_path(@meal, dish), class: 'btn btn-sm btn-danger' %>
     <br>
     <img src=<%= dish.thumb_url %> alt="No Picture / Bad URL">
+    <br><br>
   </td>
 </tr>
 
