style dish#show

--- a/app/views/dishes/search.html.erb
+++ b/app/views/dishes/search.html.erb
@@ -17,7 +17,7 @@
         <% end %>
       </ul>
     </div>
-    <div class="col-md-4 search-img">
+    <div class="col-md-4 full-width">
       <img src=<%= match[:thumb] %> alt='No thumbnail available'>
     </div>
     <div class="col-md-4">
