updated landing page text

--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -95,14 +95,13 @@
 <% else %>
   <div class="welcome-background">
     <div class="welcome-msg">
-      <h1 class="cover-heading">Plan meals, pick food, invite your friends!</h1>
-      <p class="lead">
-        Potlucky is a thing that does things yay things, this is a massive lead in in which i explain how we need to take lunch and dinner back from the restaurants and delivery services.
-      </p>
-      <p class="lead">
-        Eating is LIFE, and we shouldn't think of cooking as a chore to outsource. Make your own food, be social, and be happy.
-      </p>
-      <br><br>
+      <h1 class="cover-heading">
+        Plan meals, pick food, invite your friends!
+      </h1>
+      <h3 class="lead">
+        Potlucky is a tool to help you connect with friends and food-lovers. Host your own meals or be a guest at others -- it's all about bringing something to the table!
+      </h3>
+      <br><br><br><br>
       <p class="lead">
       <%= link_to 'Get Started!', new_user_registration_path, method: :get, class: 'btn btn-lg btn-primary' %>
       </p>
