final landing page text

--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -99,8 +99,11 @@
         Plan meals, pick food, invite your friends!
       </h1>
       <h3 class="lead">
-        Potlucky is a tool to help you connect with friends and food-lovers. Host your own meals or be a guest at others -- it's all about bringing something to the table!
+        Quit browsing delivery services like it's Netflix! Cooking is healthy, sexy, easy, and fun...and it should be social! Potlucky is a tool to help you connect with friends and food-lovers. Host your own meals, or be a guest at others.
       </h3>
+      <h2>
+        What do you bring to the table?
+      </h2>
       <br><br><br><br>
       <p class="lead">
       <%= link_to 'Get Started!', new_user_registration_path, method: :get, class: 'btn btn-lg btn-primary' %>
