--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -16,7 +16,7 @@
             <%= link_to meal.title, meal_path(meal) %>
           </h2>
           <h3 class="col-md-6">
-            <%= meal.hosted_at.strftime("%B %d, '%y \n %I:%M %p") %>
+            <%= meal.hosted_at.strftime("%B %d, '%y | %I:%M %p") %>
             @ <%= meal.location %>
           </h3>
         </div>
