--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -39,7 +39,7 @@
             <%= link_to meal.title, meal_path(meal) %>
           </h2>
           <h3 class="col-md-6">
-            <%= meal.hosted_at.strftime("%B %d, '%y | %I:%M %p")   @ <%= meal.location %>
+            <%= meal.hosted_at.strftime("%B %d, '%y | %I:%M %p") %>  @ <%= meal.location %>
           </h3>
         </div>
         <hr>
@@ -62,7 +62,7 @@
             <%= link_to meal.title, meal_path(meal) %>
           </h2>
           <h3 class="col-md-6">
-            <%= meal.hosted_at.strftime("%B %d, '%y | %I:%M %p")   @ <%= meal.location %>
+            <%= meal.hosted_at.strftime("%B %d, '%y | %I:%M %p") %>  @ <%= meal.location %>
           </h3>
         </div>
         <hr>
@@ -81,7 +81,7 @@
             <%= link_to meal.title, meal_path(meal) %>
           </h2>
           <h3 class="col-md-6">
-            <%= meal.hosted_at.strftime("%B %d, '%y | %I:%M %p")   @ <%= meal.location %>
+            <%= meal.hosted_at.strftime("%B %d, '%y | %I:%M %p") %>  @ <%= meal.location %>
           </h3>
         </div>
         <hr>
